ladpsa: criticals with Linux Studio Plugins
edit: The proof of concept patch below gets rid of the assertion failures. It's the float to int conversion that's the issue.
edit2: there's a patch below that helps reproduce this issue to show you where the problem is.
I'm getting the following only the first time I run pulseeffects
after a reboot:
$ pulseeffects
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.309: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.310: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.311: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.311: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.311: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.311: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.311: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.311: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.312: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.312: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.312: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.312: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.313: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.313: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.313: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.313: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.314: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.314: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.315: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.315: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.317: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.317: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.320: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.320: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.321: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.321: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.324: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.325: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.329: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.329: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.336: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.336: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.339: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.339: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.346: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.346: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.347: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.347: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.348: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.348: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.350: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.350: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.352: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.352: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.354: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.354: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.356: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.356: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.360: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.360: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.364: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.364: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.365: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.365: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.365: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.365: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.366: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.366: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.367: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.367: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.368: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.368: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.369: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.369: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.370: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.370: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.371: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.371: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.372: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.372: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.374: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.374: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.376: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.376: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.378: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.378: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.379: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.379: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.380: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.380: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.382: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.382: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.383: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.383: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.384: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.384: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.384: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.384: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.385: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.385: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.386: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.386: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.387: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.387: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.388: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.388: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.388: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.389: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.389: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.389: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.390: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.390: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.391: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.391: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.392: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.392: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.393: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.393: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.393: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.393: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.394: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.394: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.395: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.395: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.396: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.396: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.396: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.396: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.397: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.397: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.398: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.398: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.398: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.398: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.403: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.403: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.406: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.406: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.407: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.407: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.408: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.408: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.410: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.410: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.412: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.412: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.418: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.418: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.423: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.423: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.426: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.426: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.429: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.429: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.434: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.434: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.440: g_param_spec_int: assertion 'default_value >= minimum && default_value <= maximum' failed
(gst-plugin-scanner:4487): GLib-GObject-CRITICAL **: 16:34:13.440: validate_pspec_to_install: assertion 'G_IS_PARAM_SPEC (pspec)' failed
error: failed to expand CURIE `xsd:float'
(pulseeffects:4451): pulseeffects-WARNING **: 16:34:17.130: pitch plugin was not found!
(pulseeffects:4451): pulseeffects-WARNING **: 16:34:17.273: pitch plugin was not found!
and subsequent times(unless I reboot first) when I re-run pulseeffects
I get only these:
$ pulseeffects
(pulseeffects:92180): pulseeffects-WARNING **: 16:59:36.148: pitch plugin was not found!
(pulseeffects:92180): pulseeffects-WARNING **: 16:59:36.295: pitch plugin was not found!
Ignore the pitch plugin was not found
, I don't have some archlinux package(s) installed for that plugin.
The only issues are those assertions and that
error: failed to expand CURIE `xsd:float'
plus the fact that they only show up the first time after reboot. Restarting X has no effect. It has to be a full reboot, for some reason.
I'm running xfce4 with xfwm4 in ArchLinux on a laptop, linux kernel 5.4.15-g111e415c94f5
$ pacman -Qs gstreamer
local/gst-plugins-bad 1.16.2-2
GStreamer open-source multimedia framework bad plugins
local/gst-plugins-base 1.16.2-1
GStreamer open-source multimedia framework base plugins
local/gst-plugins-base-libs 1.16.2-1
GStreamer open-source multimedia framework base libraries
local/gst-plugins-good 1.16.2-2
GStreamer open-source multimedia framework good plugins
local/gstreamer 1.16.0+229+g47765e164b-1
GStreamer open-source multimedia framework core library
$ pacman -Qs pulseef
local/pulseeffects 4.7.1-1
Audio Effects for Pulseaudio Applications
$ pacman -Qo /usr/lib/gstreamer-1.0/gst-plugin-scanner
/usr/lib/gstreamer-1.0/gst-plugin-scanner is owned by gstreamer 1.16.0+229+g47765e164b-1
Any ideas what I could do next to find out what's causing this or something?